# FreeRTOS-LTS

./: README.md  meson.build  meson.options
config/: FreeRTOSConfig.h.in
tools/TraceRecorder/: trcAssert.c  trcCounter.c  trcDependency.c  trcDiagnostics.c  trcEntryTable.c  trcError.c  trcEvent.c  trcEventBuffer.c  trcExtension.c  trcHardwarePort.c  trcHeap.c  trcISR.c  trcInternalEventBuffer.c  trcInterval.c  trcKernelPort.c  trcMultiCoreEventBuffer.c  trcObject.c  trcPrint.c  trcRunnable.c  trcSnapshotRecorder.c  trcStackMonitor.c  trcStateMachine.c  trcStaticBuffer.c  trcStreamingRecorder.c  trcString.c  trcTask.c  trcTimestamp.c
tools/TraceRecorder/config/: trcConfig.h  trcKernelPortConfig.h  trcKernelPortSnapshotConfig.h  trcKernelPortStreamingConfig.h  trcSnapshotConfig.h  trcStreamingConfig.h
tools/TraceRecorder/extras/ExtensionExample/cfg/: MyExtension-v1.2.3.xml
tools/TraceRecorder/extras/TraceRecorderInit/: readme.txt
tools/TraceRecorder/include/: trcAssert.h  trcCounter.h  trcDefines.h  trcDependency.h  trcDiagnostics.h  trcEntryTable.h  trcError.h  trcEvent.h  trcEventBuffer.h  trcExtension.h  trcHardwarePort.h  trcHeap.h  trcISR.h  trcInternalEventBuffer.h  trcInterval.h  trcKernelPort.h  trcMultiCoreEventBuffer.h  trcObject.h  trcPrint.h  trcProcess.h  trcRecorder.h  trcRunnable.h  trcStackMonitor.h  trcStateMachine.h  trcStaticBuffer.h  trcString.h  trcTask.h  trcThread.h  trcTimestamp.h  trcTypes.h  trcUtility.h
tools/TraceRecorder/streamports/ARM_ITM/: trcStreamPort.c
tools/TraceRecorder/streamports/ARM_ITM/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/ARM_ITM/include/: trcStreamPort.h
tools/TraceRecorder/streamports/File/: trcStreamPort.c
tools/TraceRecorder/streamports/File/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/File/include/: trcStreamPort.h
tools/TraceRecorder/streamports/Jlink_RTT/: trcStreamPort.c
tools/TraceRecorder/streamports/Jlink_RTT/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/Jlink_RTT/include/: trcStreamPort.h
tools/TraceRecorder/streamports/RingBuffer/: trcStreamPort.c
tools/TraceRecorder/streamports/RingBuffer/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/RingBuffer/include/: trcStreamPort.h
tools/TraceRecorder/streamports/STM32_USB_CDC/: trcStreamPort.c
tools/TraceRecorder/streamports/STM32_USB_CDC/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/STM32_USB_CDC/include/: trcStreamPort.h
tools/TraceRecorder/streamports/TCPIP/: trcStreamPort.c
tools/TraceRecorder/streamports/TCPIP/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/TCPIP/include/: trcStreamPort.h
tools/TraceRecorder/streamports/TCPIP_Win32/: trcStreamPort.c
tools/TraceRecorder/streamports/TCPIP_Win32/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/TCPIP_Win32/include/: trcStreamPort.h
tools/TraceRecorder/streamports/UDP/: trcStreamPort.c
tools/TraceRecorder/streamports/UDP/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/UDP/include/: trcStreamPort.h
tools/TraceRecorder/streamports/XMOS_xScope/: trcStreamPort.c
tools/TraceRecorder/streamports/XMOS_xScope/config/: trcStreamPortConfig.h
tools/TraceRecorder/streamports/XMOS_xScope/include/: trcStreamPort.h
